--- a/src/main/webapp/resources/css/grade/gradePolicyAdd_admin.css
+++ b/src/main/webapp/resources/css/grade/gradePolicyAdd_admin.css
@@ -1,75 +1,94 @@
-main{
-	width : 100%;
-	height: auto;
-    display:flex;
-    flex-direction: row;
-    background:	#A8A8A8;
-}
-.mainDiv{
+
+.gradeAddContainer{
 	margin: 0 auto;
-    width:50%;
+    width: 100%;
+	max-width: 1600px;
     height: 100%;
-    color:white;
 }
-.mainDiv>h1{
-	width:75%;
-	padding: 26px 26px 15px 26px;
-	margin:auto;
-	text-align: center;
-	border-bottom: 2px solid #A8A8A8;
+.gradeAddContainer > h1{
+	margin: 1rem;
 }
 
-.btns{
-	position: absolute;
-	top:13px;
-	right:30px;
-
+.gradeAddLineDiv{
+	width: 100%;
+	height: auto;
+	border: 1px solid #5E7291;
+	box-shadow: 0 0 1px #5E7291;
+	display: flex;
+	align-items: center;
+	margin: 0.5rem 0;
+	transition: .3s;
+	padding: 0.5rem;
 }
-.btn{
-		font-size: 1rem;
-	 	width:70px;
-        height:30px;
-        border:1px #5D7190 solid;;
-        margin:15px auto; 
-        background-color:#5D7190;  
-        text-align:center; 
-        cursor: pointer;  
-        color:white;
-        transition:all 0.9s, color 0.3;
-        border-radius: 3.3px;  
-        display: block;
+.gradeAddLineDiv span{
+	font-weight: bolder;
+	display: inline-block;
+	width: 100px;
+	margin: 1rem 0;
 }
-.btn:hover {
-	       box-shadow: 0 80px 0 0  rgba(0,0,0,0.25) inset, 
-                    0 -80px 0 0 rgba(0,0,0,0.25) inset;
+input[type="text"]{
+	width: 200px;
+	font-family: 'GimpoGothicRegular00';
 }
-
-
-table{
-	/* border: solid 2px yellowgreen; */
-	width:70%;
-	margin: auto;
-	padding: 15px;
-	
+input[type="color"]{
+	width: 200px;
+	cursor: pointer;
 }
-th, td{
-	/* border: solid 2px yellowgreen; */
-	text-align: center;
-	margin : 30px 0px;
-	padding : 23px 0px;
-	
+.gradeAddBtnDiv{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
 }
-input{
-	border-radius : 3px;
+.gradeAddBtn{
+	font-family: 'GimpoGothicRegular00';
+	font-size: 1rem;
+	width: 70px;
 	height: 30px;
-	width: 370px;
-	text-align: center;
+	border: 1px #5D7190 solid;
+	background-color: #5D7190;
+	cursor: pointer;
+	color: white;
+	transition: .3s;
+	border-radius: 5px;
+	margin: 0 0.5rem;
 }
-input:focus{
-	outline: none;
+
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+	.gradeAddContainer{
+		width: 95%;
+	}
+	.gradeAddLineDiv span{
+		font-weight: bolder;
+		display: inline-block;
+		width: 100px;
+		margin: 1rem 0;
+		font-size: 0.8rem;
+	}
+	input[type="text"]{
+		width: 100px;
+		font-family: 'GimpoGothicRegular00';
+	}
+	input[type="color"]{
+		width: 100px;
+		cursor: pointer;
+	}
+
 }
-.grade_comment{
-	width: 220px;
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+	.gradeAddBtn:hover {
+		background-color: #516e8f;
+		box-shadow: 0 0 15px rgba(0, 0, 0, 0.76) inset;
+	}
+	.gradeAddLineDiv:hover{
+		box-shadow: 0 0 4px 2px #5E7291;
+	}
 }
 
 
