--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -457,6 +457,56 @@
     cursor: pointer;
 }
 
+.myGradeState{
+    width:100%;
+    max-width: 1600px;
+    height: 300px;
+    padding: 1rem;
+    margin: 5rem auto 0;
+}
+.myGradeState_top{
+    width: 100%;
+    height: 50%;
+}
+.myGradeState_top > h3{
+    display: block;
+    padding: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.67);
+}
+.myGradeState_top > p{
+    display: block;
+    padding: 0.5rem;
+    font-weight: bolder;
+    color: var(--subFontColor3);
+    background-color: rgba(0, 0, 0, 0.67);
+}
+.myGradeState_bottom{
+    background-color: rgba(255, 255, 255, 0.56);
+    border-radius: 10px;
+    width: 100%;
+    height: 50%;
+    box-shadow: 3px 3px gray;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+
+}
+#myGradeState_bottom_title{
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
+    background-color: #2e383c;
+}
+#myGradeState_bottom_text{
+    color: black;
+    width: fit-content;
+    font-weight: bolder;
+}
+
 
 @keyframes loadCarouselMainImg {
     0%{
@@ -470,6 +520,21 @@
 
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
+    .myGradeState_top > h3{
+        font-size: 1rem;
+    }
+    .myGradeState_top > p{
+        font-size: 0.7rem;
+    }
+    .myGradeState_bottom{
+        flex-direction: column;
+    }
+    #myGradeState_bottom_title{
+        font-size: 0.7rem;
+    }
+    #myGradeState_bottom_text{
+        font-size: 0.7rem;
+    }
     /*광고*/
     .carousel {
         height: 300px;
