--- a/src/main/webapp/resources/css/user/mypage.css
+++ b/src/main/webapp/resources/css/user/mypage.css
@@ -438,18 +438,14 @@
 	left: 50%;
 	transform: translate(-50%,-50%);
 	width: 80%;
-	height: 80vh;
+	height: 80%;
 	background-color: rgba(44, 44, 44, 0.68);
 	color: white;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
-.myListDiv h3{
-	display: inline-block;
-	height: 30px;
-	margin: 0.5rem;
-}
+
 .myListHeader{
 	width: 40px;
 	height: 40px;
@@ -462,6 +458,12 @@
 	cursor: pointer;
 	transition: .3s;
 }
+.myListDiv h3{
+	display: flex;
+	height: 30px;
+	padding-left: 0.5rem;
+	align-items: center;
+}
 .freeBoard, .camping, .review{
 	width: 30%;
 	height: 100%;
@@ -469,9 +471,9 @@
 }
 .myListDivInnerDiv{
 	width: 100%;
-	height: calc(80vh - 30px);
+	height: calc(100% - 30px);
 	overflow-y: auto;
-	padding: 0.5rem;
+	padding: 0 0.5rem;
 }
 
 .lineDiv{
@@ -482,6 +484,7 @@
 	cursor: pointer;
 	display: flex;
 	align-items: center;
+	margin: 3px 0;
 
 
 
@@ -628,7 +631,7 @@
 		border: 1px solid white;
 	}
 	.myListDivInnerDiv{
-		height: calc((80vh / 3) - 30px);
+		height: calc(100% - 30px);
 	}
 	.idxSpan, .titleSpan{
 		font-size: 0.8rem;
@@ -652,7 +655,7 @@
 		border: 1px solid white;
 	}
 	.myListDivInnerDiv{
-		height: calc((80vh / 3) - 30px);
+		height: calc(100% - 30px);
 	}
 	.idxSpan, .titleSpan{
 		font-size: 0.8rem;
