--- a/src/main/webapp/resources/css/shop/draw/draw_add.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_add.css
@@ -70,6 +70,13 @@
     justify-content: center;
     position: relative;
 }
+.titleLengthSpan{
+    position: absolute;
+    right: 1rem;
+    bottom: 0.5rem;
+    color: var(--subFontColor4);
+    font-size: 0.7rem;
+}
 .oneDrawTop::after{
     content: '제목';
     font-size: 0.7rem;
@@ -224,6 +231,15 @@
 }
 .infoBottom textarea:focus{
     background-color: var(--mainColor);
+}
+.infoBottom:last-child{
+    position: relative;
+}
+.commentLengthSpan{
+    position: absolute;
+    right: 2rem;
+    bottom: 2rem;
+    color: var(--subFontColor4);
 }
 .infoBottom input[type="number"]{
     font-family: GimpoGothicRegular00;
