--- a/src/main/webapp/resources/css/user/review.css
+++ b/src/main/webapp/resources/css/user/review.css
@@ -19,48 +19,50 @@
     justify-content: center;
 }
 
-.reviewSubTitle{
-    color: var(--subFontColor);
-    padding: 0.5rem;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.19);
-    width: 100%;
-    top: 0;
-}
+
 
 
 /*리뷰컨테이너*/
 .reviewCon{
     position: relative;
     margin: 5rem auto;
-    width: 100%;
+    width: 95%;
     max-width: 1600px;
     display: flex;
     flex-direction: column;
 }
 /*별점 */
-.reviewGradeDiv{
-    position: relative;
+.reviewDiv{
     width: 100%;
-    min-height: 300px;
-    background-color: rgba(45, 45, 45, 0.78);
-
-
+    height: fit-content;
+    margin: 2rem 0;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.67);
+    transition: .3s;
+    border: 1px solid rgba(0, 0, 0, 0.67);
 }
-.productGradeSpan{
-	color: var(--fontColor);
-    font-weight: bolder;
-	font-size: 2rem;
+.reviewSubTitle{
+    color: var(--subFontColor);
+    display: block;
+    padding: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.19);
+    width: 100%;
 }
-
 .gradeTop{
     width: 100%;
-    height: 20%;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2.5rem;
     color: var(--subFontColor);
+}
+.productGradeSpan{
+    color: var(--fontColor);
+    font-weight: bolder;
+    font-size: 2rem;
+}
+.orderNumberSpan{
+    font-weight: bolder;
 }
 /*별점*/
 .gradeBottom{
@@ -69,135 +71,116 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+.star{
+    display: inline-block;
     padding: 1rem;
+    color: yellow;
+    font-size: 2rem;
+    cursor: pointer;
 }
-.stars{
-    width: 180px;
-    height: 180px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.stars span{
-    font-size: 10rem;
-    color: rgba(199, 199, 55, 0.83);
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-/*배송 */
-.reviewDeliveryDiv{
-    position: relative;
+.speedWrapDiv{
     width: 100%;
-    min-height: 300px;
-    background-color: rgba(45, 45, 45, 0.78);
-
     padding: 1rem;
     display: flex;
-    align-items: center;
+    align-content: center;
     justify-content: space-around;
-    color: black;
-    margin-top: 5rem;
 }
-
-.speedDiv{
-    width: 30%;
-    height: 100px;
-    border-radius: 10px;
-    background-color: white;
-    padding: 1rem;
-    font-family: 'Black Han Sans';
+.speedSpan{
+    display: inline-block;
+    padding: 2rem;
+    border-radius: 4px;
+    font-family: 'GimpoGothicRegular00';
+    font-weight: bolder;
+    color: var(--subFontColor4);
     transition: .3s;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
-/*리뷰작성 */
-.reviewWriteDiv{
+.reviewTextWrapDiv{
+    padding: 1rem;
+    height: 300px;
     position: relative;
-    width: 100%;
-    min-height: 300px;
-    background-color: rgba(45, 45, 45, 0.78);
-    margin-top: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-
+.reviewTextLengthSpan{
+    position: absolute;
+    font-size: 0.7rem;
+    color: var(--subFontColor4);
+    bottom: 2rem;
+    right: 2rem;
+}
 #reviewTextArea{
     width: 100%;
     height: 100%;
     padding: 0.5rem;
 	background-color: var(--subColor2);
-    color: white;
-	font-family: 'GimpoGothicBold00';
+    color: var(--basicFontColor);
+	font-family: 'GimpoGothicRegular00';
 	transition: .3s;
-	border: none;
-	outline: none;
-	resize: none;
+	border: 0;
+    resize: none;
 }
 
 #reviewTextArea:focus{
 	background-color: var(--mainColor);
 }
-/*첨부 */
-.reviewAttachDiv{
-    position: relative;
-    width: 100%;
-    min-height: 300px;
-    background-color: rgba(45, 45, 45, 0.78);
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 5rem;
-}
-.reviewAttachInnerDiv{
-    padding: 3rem 1rem;
-    width: 50%;
-}
-.reviewAttachInnerDiv p{
-    padding-bottom: 2rem;
-}
-/*저장하기 */
-.reviewBtnDiv{
-    position: relative;
-    width: 100%;
-    min-height: 100px;
-    background-color: rgba(45, 45, 45, 0.78);
-    display: flex;
-    align-items: end;
-    justify-content: center;
-    margin-top: 5rem;
-}
 
+.reviewAttachInnerDiv{
+    padding: 0.5rem;
+}
+.reviewAttachInnerDiv label{
+    display: block;
+    padding: 1rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+}
+.reviewAttachInnerDiv span{
+    font-size: 0.8rem;
+    color: var(--subFontColor3);
+    display: block;
+    text-align: center;
+    width: 400px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.reviewBtnDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+}
+.essentialSpan{
+    color: var(--fontColor)
+}
+.reviewFileInput{
+    overflow: hidden;
+    width: 0;
+    height: 0;
+}
 @media screen and (min-width: 1px) and (max-width: 767px) {
-    .reviewAttachInnerDiv{
-        width: 100%;
+    .reviewAttachInnerDiv span{
+        width: 200px;
     }
-    .stars{
-        width: fit-content;
-        height: auto;
+    .speedWrapDiv{
+        flex-direction: column;
     }
-    .stars span{
-        font-size: 2rem;
+    .star{
+        font-size: 1rem;
     }
-    .reviewCon{
-        width: 95%;
-    }
-    .speedDiv{
-        font-size: 0.7rem;
-    }
+}
+@media screen and (min-width: 767px) and (max-width: 1023px){
+
 }
 @media screen and (min-width: 1024px) {
     .navDiv a:hover{
         color: var(--fontColor);
+    }
+    .reviewDiv:hover{
+        box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.67);
+
     }
 
 }
