--- a/src/main/webapp/resources/css/shop/draw/draw_admin.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_admin.css
@@ -63,6 +63,7 @@
     flex-wrap: wrap;
     margin-top: 5rem;
     background-color: var(--subColor2);
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.82);
 }
 
 .oneDrawTop {
@@ -78,8 +79,7 @@
     width: 100%;
     height: 400px;
     display: flex;
-    border-left: 2px solid var(--mainColor);
-    border-right: 2px solid var(--mainColor);
+
 }
 
 /*이벤트 각각 이미지*/
@@ -98,8 +98,7 @@
 .productMainImg {
     width: 350px;
     height: 350px;
-    border-radius: 10px;
-    box-shadow: var(--subColor2) 0px 0px 5px 3px;
+    box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.84);
 }
 
 .drawBottomDiv {
@@ -141,9 +140,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-left: 2px solid var(--mainColor);
-    border-right: 2px solid var(--mainColor);
-    border-bottom: 2px solid var(--mainColor);
+
 }
 
 .drawModifyBtn {
