--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -70,16 +70,9 @@
 	align-items: center;
 	cursor: pointer;
 	transition: .3s;
+
 }
-.homeImgWrapDiv img{
-	width: 100%;
-	height: 100%;
-	object-fit : fill;
-	transition: .3s;
-	opacity: 0;
-	/*box-shadow: white 0px 0px 5px 3px;*/
-	filter: blur(4px);
-}
+
 .homeImgWrapDiv h1 {
 	position: absolute;
 	top: 50%;
@@ -138,9 +131,7 @@
 	.homeImgWrapDiv h1{
 		font-size: 1.5rem;
 	}
-	.homeImgWrapDiv img{
-		opacity: 0;
-	}
+
 	.homeImgWrapDiv p{
 		opacity: 1;
 		font-size: 0.5rem;
@@ -169,9 +160,7 @@
 	.homeImgWrapDiv h1{
 		font-size: 3rem;
 	}
-	.homeImgWrapDiv img{
-		opacity: 0;
-	}
+
 	.homeImgWrapDiv p{
 		opacity: 1;
 	}
@@ -183,11 +172,10 @@
 		transform: translateY(-10%);
 	}
 	.homeImgWrapDiv:hover{
-		box-shadow: white 0px 0px 5px 3px;
+		border: 1px solid white;
+		box-shadow: white 0px 0px 2px 1px;
 	}
-	.homeImgWrapDiv:hover img{
-		opacity: 0.8;
-	}
+
 	.homeImgWrapDiv:hover p{
 		opacity: 1;
 	}
