--- a/src/main/webapp/resources/css/community/community_global.css
+++ b/src/main/webapp/resources/css/community/community_global.css
@@ -1,20 +1,21 @@
 
 /* 폰트 url */
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Raleway:wght@200&display=swap');
- 
+
 header{
     width: 100%;
-    height: 100px;
+    height: auto;
     display: flex;
+    flex-wrap: wrap;
     background-color: var(--subColor);
     border-bottom: 0.5px solid var(--borderColor);
 }
 
 header .logo{
-    width: 20%;
-    height: 100%;
+    width: 15%;
+    height: 100px;
     color: var(--fontColor);
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,21 +34,17 @@ header .logo span{
 }
 
 header .menu{
-    width: 57%;
-    height: 100%;
+    width: 35%;
+    height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    justify-content: space-around;
 }
 
 header .menu a{
     text-decoration: none;
     color: white;
     font-size: 1.1rem;
-    margin-left: 3rem;
     cursor:pointer;
     transition:all 0.1s;
 }
@@ -57,21 +54,18 @@ header .menu a:hover{
 }
 
 header .login{
-    width: 23%;
-    height: 100%;
+    width: 50%;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 header .login a{
     color: rgb(209, 209, 209);
-    margin-left: 1rem;
     text-decoration: none;
     transition:all 0.1s;
+    margin: 0 0.5rem;
 }
 
 header .login a:hover{
@@ -91,15 +85,14 @@ main{
     background-color: var(--subColor);
 }
 
-
 footer{
     width: 100%;
-    min-width: 1200px;
-    height: 200px;
+    height: auto;
     border-top: 0.5px solid var(--borderColor);
     background-color: var(--subColor);
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     font-family: 'Nanum Gothic', sans-serif;
 }
 
@@ -109,12 +102,12 @@ footer p{
 
 footer .footer_logo{
     width: 30%;
-    height: 100%;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Raleway', sans-serif;
-    font-size : 1.5rem;
+    font-size : 1.2rem;
 }
 
 footer .footer_logo h1{
@@ -122,9 +115,6 @@ footer .footer_logo h1{
 	transition: .3s;
 	cursor: pointer;
 }
-/* footer .footer_logo h1:hover{
-  	transform: translateY(-10%);
-}  */
 
 footer .footer_logo h1 span{
     color: white;
@@ -132,10 +122,66 @@ footer .footer_logo h1 span{
 
 footer .footer_content{
     width: 70%;
-    height: 100%;
+    height: 200px;
     display: flex;
     flex-direction: column;
-    padding: 2.5rem;
-    padding-left:30rem;
     color: var(--subFontColor);
+    padding: 1rem;
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+    header .logo{
+        width: 100%;
+    }
+    header .menu{
+        width: 100%;
+        justify-content: center;
+    }
+    header .menu a{
+        margin: 0 0.5rem;
+    }
+    header .login{
+        width: 100%;
+    }
+    .loginSpan{
+        display: none;
+    }
+    footer{
+        flex-direction: column;
+    }
+    footer .footer_logo{
+        width: 100%;
+        height: 50px;
+        font-size: 0.9rem;
+    }
+    footer .footer_content{
+        width: 100%;
+        font-size: 0.7rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    header .logo{
+        width: 30%;
+    }
+    header .menu{
+        width: 70%;
+    }
+    header .login{
+        width: 100%;
+    }
+    footer{
+        flex-direction: column;
+    }
+    footer .footer_logo{
+        width: 100%;
+        height: 50px;
+    }
+    footer .footer_content{
+        width: 100%;
+    }
+
+}
+@media screen and (min-width: 1024px){
+
+
 }
