--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -609,8 +609,13 @@
         width: 100%;
         height: 150px;
     }
+    .youtubeListContainer{
+        width: 95%;
+        margin: 0 auto;
+    }
     .youtubeListLineDiv{
         flex-direction: column;
+        margin: 5px 0;
     }
     .youtubeListLineInnerDiv{
         height: auto;
