최원석 노트북 - 등급 정보 보기, 등급 추가 기능 개발 완료

--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -4,6 +4,10 @@
 	background-color: var(--mainColor);
 	height: 100vh;
 }
+/*아이콘 공통*/
+.iconSpan{
+	font-size: 1.5rem;
+}
 /*상단*/
 .homeTop{
 	height: 80px;
