--- a/src/main/webapp/resources/css/grade/gradePolicyAdd_admin.css
+++ b/src/main/webapp/resources/css/grade/gradePolicyAdd_admin.css
@@ -5,8 +5,18 @@
 	max-width: 1600px;
     height: 100%;
 }
-.gradeAddContainer > h1{
-	margin: 1rem;
+.gradeCountSpan{
+	display: inline-block;
+	margin: 1rem 0;
+	font-weight: bolder;
+	font-size: 1.5rem;
+	color: var(--fontColor);
+}
+.gradeSpan{
+	display: inline-block;
+	margin: 1rem 0;
+	font-weight: bold;
+	color: var(--subFontColor4);
 }
 
 .gradeAddLineDiv{
@@ -27,11 +37,25 @@
 	margin: 1rem 0;
 }
 input[type="text"]{
-	width: 200px;
-	font-family: 'GimpoGothicRegular00';
+	width: 300px;
+	background-color: var(--subColor2);
+	color: var(--basicFontColor);
+	padding: 0.5rem;
+	border: 0;
+	transition: .3s;
+	font-family: 'GimpoGothicBold00';
 }
+input[type="number"]{
+	 width: 300px;
+	 background-color: var(--subColor2);
+	 color: var(--basicFontColor);
+	 padding: 0.5rem;
+	 border: 0;
+	 transition: .3s;
+	 font-family: 'GimpoGothicBold00';
+ }
 input[type="color"]{
-	width: 200px;
+	width: 300px;
 	cursor: pointer;
 }
 .gradeAddBtnDiv{
@@ -63,16 +87,22 @@ input[type="color"]{
 		font-weight: bolder;
 		display: inline-block;
 		width: 100px;
-		margin: 1rem 0;
+		margin: 0.5rem 0 0.5rem;
 		font-size: 0.8rem;
 	}
+	.gradeAddLineDiv{
+		flex-direction: column;
+		padding-bottom: 0.5rem;
+		align-items: start;
+	}
 	input[type="text"]{
-		width: 100px;
-		font-family: 'GimpoGothicRegular00';
+		width: 100%;
+	}
+	input[type="number"]{
+		width: 100%;
 	}
 	input[type="color"]{
-		width: 100px;
-		cursor: pointer;
+		width: 100%;
 	}
 
 }
