--- a/src/main/webapp/resources/css/shop/order/order_detail.css
+++ b/src/main/webapp/resources/css/shop/order/order_detail.css
@@ -1,6 +1,7 @@
 /*주문 상세 컨테이너*/
 .orderContainer{
-    width: 70%;
+    width: 100%;
+    max-width: 1600px;
     margin: 0 auto;
     padding-top: 1rem;
 }
@@ -21,9 +22,33 @@
 .orderAddressDiv{
     width: 100%;
 }
-.addressDiv{
+.addressRadioLabel{
+    cursor: pointer;
+}
+.addressSelectDiv {
     padding: 1rem;
-    font-size: 1.2rem;
+}
+.addressWriteSelectDiv{
+    padding: 1rem 1rem 0;
+
+}
+.addressDiv{
+    padding: 0 1rem 1rem;
+
+}
+.addressDiv p{
+    color: var(--subFontColor3);
+}
+.addressWriteDiv{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+
+}
+#addressSearchBtn{
+    display: inline-block;
+    margin: 0 0 1rem;
+    font-size: 1rem;
 }
 .requestDiv{
     position: relative;
@@ -210,6 +235,7 @@
 	color: red;
 	cursor: pointer;
 	transition: .3s;
+    font-size: 1.2rem;
 }
 
 
@@ -301,7 +327,16 @@
         height: 35px;
         font-size: 0.7rem;
     }
+    .addressWriteDiv{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    #addressSearchBtn{
+        display: inline-block;
 
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px){
