--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -367,10 +367,7 @@ main {
 /*별점*/
 .star {
     color: yellow;
-    font-variation-settings: 'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48;
+   font-size: 1.2rem;
 }
 
 .reviewsGradeInnerThumb {
@@ -383,10 +380,7 @@ main {
     cursor: pointer;
     color: rgb(139, 197, 255);
     transition: .3s;
-    font-variation-settings: 'FILL' 1,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48;
+    font-size: 1.5rem;
 }
 
 
@@ -466,6 +460,7 @@ main {
     z-index: -1;
 }
 .playIconSpan{
+    font-size: 1.5rem;
     transition: .3s;
 }
 
@@ -481,20 +476,15 @@ main {
     backdrop-filter: blur(4px);
 }
 
-.closeYoutubeContainerIcon{
+.xi-close.closeYoutubeContainerIcon{
     cursor: pointer;
     position: absolute;
     z-index: 998;
     top: 1rem;
     left: 1rem;
-    background-color: var(--mainColor);
+    font-size: 1.5rem;
     color: var(--basicFontColor);
     transition: .3s;
-    font-variation-settings:
-            'FILL' 0,
-            'wght' 700,
-            'GRAD' 0,
-            'opsz' 48
 }
 
 .youtubeInnerDiv {
@@ -533,20 +523,15 @@ main {
     margin: 0 auto;
 }
 
-.closeFullImageContainerIcon {
+.xi-close.closeFullImageContainerIcon {
     cursor: pointer;
     position: absolute;
     z-index: 998;
     top: 1rem;
     left: 1rem;
-    background-color: var(--mainColor);
+    font-size: 1.5rem;
     color: var(--basicFontColor);
     transition: .3s;
-    font-variation-settings:
-            'FILL' 0,
-            'wght' 700,
-            'GRAD' 0,
-            'opsz' 48
 }
 
 /*메인 상품 이미지 변경 애니메이션 클래스*/
@@ -747,7 +732,7 @@ main {
     .thumb:hover {
         color: rgb(0, 128, 255);
     }
-    .closeFullImageContainerIcon:hover, closeYoutubeContainerIcon:hover{
+    .closeFullImageContainerIcon:hover, .closeYoutubeContainerIcon:hover{
         color: var(--fontColor);
         transform: scale(1.2,1.2);
     }
