최원석 노트북 - 중복 로그인 처리 개발 완료

--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -439,6 +439,7 @@ main {
     transition: .5s;
     border-radius: 50%;
     transform: rotate(-180deg);
+    z-index: 999;
 }
 .naviDiv, .toTopDiv, .toReviewCon, .toBottomDiv, .youtubeDiv{
     position: absolute;
